@@ -10,6 +10,7 @@
 
 
 Version 4.2.1
+ - Fixed: [ 2580303 ] GoogleMap - Add place not working in FireFox (wooc)
  - Added: .wmv support to JWplayer module. (windmillway)
  - Fixed: [ 2116080 ] [3870] Favourites missing from Xenea (wooc)
  - Fixed: [ 2477810 ] Media Title Not Displaying on mediaviewer.php (canajun2eh)
